--- a/api-gateway-deployment.yaml
+++ b/api-gateway-deployment.yaml
@@ -32,7 +32,7 @@ spec:
           value: productwebappsvc
         - name: userservicesvc
           value: userservicesvc
-        image: shwetashukla23/api-gateway:latest
+        image: jinglex/api-gateway:latest
         name: api-gateway-container
         ports:
         - containerPort: 8080
