--- a/mysqlservice-deployment.yaml
+++ b/mysqlservice-deployment.yaml
@@ -26,7 +26,7 @@ spec:
           value: Global@145#
         - name: MYSQL_USERNAME
           value: root
-        image: shwetashukla23/mysql:latest
+        image: jinglex/mysql:latest
         name: mysql-container
         ports:
         - containerPort: 3306
